--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,6 @@
 <mat-toolbar class="blap-transparent blap-stick-top">
+   <img src="assets/images/lg/blap-logo.png" height="50" alt="">
+
    <span class="blap-spacer"></span>
    
    <div class="w3-center">
