--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<span class="w3-text-gray blap-comfortaa-font w3-block w3-center">blap.com &copy; {{ year }} | all rights reserved</span> 
+<span class="w3-text-gray blap-comfortaa-font w3-block w3-center">blap solutions &copy; {{ year }} | all rights reserved</span> 
