--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="w3-padding">
    <div class="w3-col s12 m12 l5">
       <div class="w3-margin w3-center">
-         <span class="w3-xxxlarge blap-comfortaa-font w3-text-pink">blap.com</span>
+         <span class="w3-xxxlarge blap-comfortaa-font w3-text-pink">blap</span>
          <span class="blap-play-font w3-text-gray">IT Solutions</span>
       </div>
    </div>
