--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
-<mat-toolbar class="blap-transparent blap-stick-top">
+<mat-toolbar class="blap-opacity blap-stick-top blap-nav-height">
    <img src="assets/images/lg/blap-logo.png" height="50" alt="">
 
    <span class="blap-spacer"></span>
    
    <div class="w3-center">
-      <button mat-button class="blap-comfortaa-font" routerLink="/home" routerLinkActive="w3-text-pink">home</button>
-      <button mat-button class="blap-comfortaa-font" routerLink="/about" routerLinkActive="w3-text-pink">about</button>
-      <button mat-button class="blap-comfortaa-font" routerLink="/contact" routerLinkActive="w3-text-pink">contact</button>
+      <button mat-button class="blap-comfortaa-font" routerLink="/home" routerLinkActive="w3-border-pink w3-topbar">home</button>
+      <button mat-button class="blap-comfortaa-font" routerLink="/about" routerLinkActive="w3-border-pink w3-topbar">about</button>
+      <button mat-button class="blap-comfortaa-font" routerLink="/contact" routerLinkActive="w3-border-pink w3-topbar">contact</button>
    </div>
 </mat-toolbar>
