--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,34 +1,49 @@
 <div class="w3-padding">
-   <div class="w3-col s12 m12 l5">
-      <div class="w3-margin w3-center">
-         <span class="w3-xxxlarge blap-comfortaa-font w3-text-pink">blap</span>
-         <span class="blap-play-font w3-text-gray">IT Solutions</span>
+   <div class="w3-col s12 m5 l5">
+      <div class="w3-margin w3-text-white">
+         <div class="w3-center">
+            <span class="w3-xxxlarge blap-comfortaa-font blap-theme-color">blap</span>
+            <span class="blap-play-font w3-text-amber">IT Solutions</span>
+         </div>
+         <span class="w3-row blap-motto">Automate your business. Ease everything</span>
       </div>
    </div>
-   <div class="w3-col s12 m12 l7">
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Website</span>
-         <span class="w3-row">Get more customers for your business. Reach the right people online.</span>
+   <div class="w3-col s12 m7 l7">
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Website</span>
+            <span class="w3-row">Get more customers for your business. Reach the right people online.</span>
+         </div>
       </div>
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Mobile App</span>
-         <span class="w3-row">Wether personal or business use, we can make it for you.</span>
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Mobile App</span>
+            <span class="w3-row">Wether personal or business use, we can make it for you.</span>
+         </div>
       </div>
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Business Software</span>
-         <span class="w3-row">Automate all of your transactions, generate reports of your sales. One click away system.</span>
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Business Software</span>
+            <span class="w3-row">Automate all of your transactions, generate reports of your sales. One click away system.</span>
+         </div>
       </div>
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Network Management</span>
-         <span class="w3-row">Network configurations, data services, LAN/WAN IT infrastrucures.</span>
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Network Management</span>
+            <span class="w3-row">Network configurations, data services, LAN/WAN IT infrastrucures.</span>
+         </div>
       </div>
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Video Surveillance (CCTV)</span>
-         <span class="w3-row">Legal requirement for startup businesses. Access through your smart phone.</span>
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Video Surveillance (CCTV)</span>
+            <span class="w3-row">Legal requirement for startup businesses. Access through your smart phone.</span>
+         </div>
       </div>
-      <div class="blap-section w3-text-light-gray">
-         <span class="w3-xxlarge blap-play-font">Computer Products and Services</span>
-         <span class="w3-row">We provide, setup and/or upgrade your PC to the best performance</span>
+      <div class="w3-col s12 m6 l4">
+         <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
+            <span class="w3-xlarge w3-text-amber blap-play-font">Computer Products and Services</span>
+            <span class="w3-row">We provide, setup and/or upgrade your PC to the best performance</span>
+         </div>
       </div>
    </div>
 </div>
