--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="blap-bg">
-   <div class="blap-scrollable">
-      <app-navbar></app-navbar>
+   <app-navbar></app-navbar>
 
+   <div class="blap-scrollable blap-section">
       <router-outlet></router-outlet>
-
-      <app-footer></app-footer>
    </div>
+   
+   <app-footer></app-footer>
 </div>
