--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="blap-bg">
    <app-navbar></app-navbar>
 
-   <div class="blap-scrollable blap-section">
+   <div class="blap-scrollable">
       <router-outlet></router-outlet>
    </div>
    
