--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -1,3 +1,31 @@
-<span class="w3-container w3-section blap-margin-large">
-   Welcome to blap solutions! We are a group of IT professionals from the Philippines and the nature of our company is to provide technical solution services. We offer software programming for business or personal use. You could provide us some suggestions or requirements according to your preferred designs or you could just leave it to our team’s capable hands! We also offer network management services and even CCTV camera installation; both in one package! Need computer parts and products? We got it here too! Provided only from the best computer supplier. Our computer services provide only top-notch results. We prioritize client satisfaction here at blap solutions!
-</span>
+<div class="w3-margin w3-text-white">
+   <div class="w3-padding w3-round blap-opacity w3-large w3-hide-medium w3-hide-large">
+      <span class="w3-text-amber">W</span>elcome to blap solutions! We are a group of IT professionals from the Philippines and the nature of our company is to provide technical solution services.
+      <br><br>
+      <span class="w3-text-amber">W</span>e offer software programming for business or personal use. You could provide us some suggestions or requirements according to your preferred designs or you could just leave it to our team’s capable hands!
+      <br><br>
+      <span class="w3-text-amber">W</span>e also offer network management services and even CCTV camera installation; both in one package! Need computer parts and products? We got it here too! Provided only from the best computer supplier.
+      <br><br>
+      <span class="w3-text-amber">O</span>ur computer services provide only top-notch results. We prioritize client satisfaction here at blap solutions!
+   </div>
+
+   <div class="w3-padding w3-round blap-opacity w3-xlarge w3-hide-small w3-hide-large">
+      <span class="w3-text-amber">W</span>elcome to blap solutions! We are a group of IT professionals from the Philippines and the nature of our company is to provide technical solution services.
+      <br><br>
+      <span class="w3-text-amber">W</span>e offer software programming for business or personal use. You could provide us some suggestions or requirements according to your preferred designs or you could just leave it to our team’s capable hands!
+      <br><br>
+      <span class="w3-text-amber">W</span>e also offer network management services and even CCTV camera installation; both in one package! Need computer parts and products? We got it here too! Provided only from the best computer supplier.
+      <br><br>
+      <span class="w3-text-amber">O</span>ur computer services provide only top-notch results. We prioritize client satisfaction here at blap solutions!
+   </div>
+
+   <div class="w3-padding w3-round blap-opacity w3-xxlarge w3-hide-small w3-hide-medium">
+      <span class="w3-text-amber">W</span>elcome to blap solutions! We are a group of IT professionals from the Philippines and the nature of our company is to provide technical solution services.
+      <br><br>
+      <span class="w3-text-amber">W</span>e offer software programming for business or personal use. You could provide us some suggestions or requirements according to your preferred designs or you could just leave it to our team’s capable hands!
+      <br><br>
+      <span class="w3-text-amber">W</span>e also offer network management services and even CCTV camera installation; both in one package! Need computer parts and products? We got it here too! Provided only from the best computer supplier.
+      <br><br>
+      <span class="w3-text-amber">O</span>ur computer services provide only top-notch results. We prioritize client satisfaction here at blap solutions!
+   </div>
+</div>
