--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -12,37 +12,37 @@
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Website</span>
-            <span class="w3-row">Get more customers for your business. Reach the right people online.</span>
+            <span class="w3-row">Get more customers for your business. Manage and organize your contents with the help of an excellently-programmed platform designed to specifically aid you with your endeavors.</span>
          </div>
       </div>
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Mobile App</span>
-            <span class="w3-row">Wether personal or business use, we can make it for you.</span>
+            <span class="w3-row">Whether it is for business or personal use, our capable team can help you develop your own mobile application that goes in accordance with your preferred concept and ideas.</span>
          </div>
       </div>
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Business Software</span>
-            <span class="w3-row">Automate all of your transactions, generate reports of your sales. One click away system.</span>
+            <span class="w3-row">Get organized with the support of our business software service. Automate all your transactions, generate report of your sales, and manage other information. Create a one-stop system for all of your important data.</span>
          </div>
       </div>
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Network Management</span>
-            <span class="w3-row">Network configurations, data services, LAN/WAN IT infrastrucures.</span>
+            <span class="w3-row">Help manage and secure your network connection for your business. Use a systematic platform to maintain an organized setting that our team developed. Network configurations, data services, and LAN/WAN IT infrastructures, we got it all for you.</span>
          </div>
       </div>
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Video Surveillance (CCTV)</span>
-            <span class="w3-row">Legal requirement for startup businesses. Access through your smart phone.</span>
+            <span class="w3-row">Legal requirement for startup businesses. Provide surveillance to monitor your physical business area that you can access through your smartphone.</span>
          </div>
       </div>
       <div class="w3-col s12 m6 l4">
          <div class="blap-margin-small blap-opacity w3-text-light-gray w3-round w3-padding blap-services-height">
             <span class="w3-xlarge w3-text-amber blap-play-font">Computer Products and Services</span>
-            <span class="w3-row">We provide, setup and/or upgrade your PC to the best performance</span>
+            <span class="w3-row">Setup your personal computer and upgrade it to the best performance with our high-end computer parts and products.</span>
          </div>
       </div>
    </div>
