--- a/src/app/modules/about/about.component.css
+++ b/src/app/modules/about/about.component.css
@@ -1,6 +1,6 @@
 .blap-margin-large {
-   margin-left: 200px;
-   margin-right: 200px;
-   margin-top: 50px;
-   margin-bottom: 50px;
+   padding-left: 200px;
+   padding-right: 200px;
+   padding-top: 50px;
+   padding-bottom: 50px;
 }
